dev/non_executable_reasons_record_from_random_10k/2776.txt
3.6
An error occurred while executing the following cell:
------------------
import warnings
warnings.filterwarnings('ignore')
from __future__ import print_function
import torch
import torch.nn as nn
from torch.autograd import Variable
import torch.optim as optim
import numpy as np
#import matplotlib
#matplotlib.use('GtkAgg')
import matplotlib.pyplot as plt
import pandas as pd
------------------

[0;36m  File [0;32m"<ipython-input-1-a0128a41d04f>"[0;36m, line [0;32m6[0m
[0;31m    from torch.autograd import Variable[0m
[0m           ^[0m
[0;31mSyntaxError[0m[0;31m:[0m from __future__ imports must occur at the beginning of the file

SyntaxError: from __future__ imports must occur at the beginning of the file (<ipython-input-1-a0128a41d04f>, line 6)

Executability                            : False
